<resources>
    <string name="app_name">LeafBook</string>
    <string name="my_name">Marlon David Diaz Aranda</string>
    <string name="sent">Enviar</string>
    <string name="register">Regístrarte</string>
    <string name="startnow">Comienza Ahora</string>
    <string name="into">Ingresar</string>
    <string name="edit">Editar</string>
    <string name="getpassword">Recupera tu contraseña</string>
    <string name="no_account">¿No tienes cuenta?</string>
    <string name="already_account">Ya tengo Cuenta</string>
    <string name="home_sentences">Inicia con CloudNest y descubre el mundo del desarrollo del software</string>
    <string name="login_sentences">El desarrollo es un viaje, no un destino.</string>
    <string name="central_sentences">por favor ingresa tus datos y calorias</string>
    <string name="google">Ingresa con google</string>
    <string name="getPassword_sentences">Te acabamos de enviar un correo para recuperar tu contraseña</string>
    <string name="register_sentences">Completa el formulario para iniciar</string>
    <string name="conditions">Terminos Y Condiciones</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="pantalla_de_inicio">pantalla de inicio</string>
    <string name="pantalla_de_productos">pantalla_de_productos</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="Inicio">Inicio\n</string>
    <string name="Productos">Productos</string>
    <string name="title_inicio">Bienvenido a la tienda virtual</string>
    <string name="title_productos">Productos\n</string>
    <string name="title_perfil">Usuario\n</string>
    <string name="title_edit_profile">Editar Perfil</string>
    <string name="titulo_carrito">Sus compras</string>
    <string name="title_categorias">Categorias</string>
    <string name="carrito">Carrito</string>
    <string name="categorias">Categorias</string>
    <string name="usuario">Usuario</string>
    <string name="stock_disponible">Stock disponible: %d</string>
    <string name="producto_anadido">Producto %s añadido al carrito</string>
    <string name="bienvenido_a_coldnest">Bienvenido a ColdNest</string>
    <string name="bienveniedos_a_e_commerce_donde_podras_descrubrir_productos_a_un_excelente_precion_con_la_mejor_calidad_de_mercado">Bienveniedos a e-commerce donde podras descrubrir productos a un excelente precion con la mejor calidad de mercado.</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="editar">Editar</string>
    <string name="carrito_de_compras">Carrito de Compras</string>
    <string name="total_a_pagar_0_00">Total a pagar: $0.00</string>
    <string name="total_de_productos_0">Total de productos: 0</string>
    <string name="go_to_carrito">go_to_carrito</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="eliminar">Eliminar</string>
    <string name="_25_productos">25 productos</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="google_cloud_client_id">1008341001009-inepm9odb08qfj4k435oun86du37bad9.apps.googleusercontent.com</string>
    <string name="API_KEY">AIzaSyCr6arZXkJXM6NpjMlxAfpyhuQrD9sVmjY</string>
    <string name="Ubicaciones">Ubicaciones</string>]
    <string name="ubicaciontiendafisica">Ubicacion Tienda Fisica</string>
    <string name="categorias_Libros">Categorias Libros</string>
    <string name="street_2_example">Street 2-Example</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="monday_to_friday_n3_00_am_to_8_00_pm">Monday to Friday:\n3:00 am to 8:00 pm</string>
    <string name="store1">Store1</string>
    <string name="street_1_example">Street 1-Example</string>
    <string name="your_position">Your Position:</string>
    <string name="near_stores">Near Stores</string>

</resources>
