<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start">


    <item android:id="@+id/InicioFragment"
        android:title="@string/Inicio"/>

    <item android:id="@+id/ProductosFragment"
        android:title="@string/Productos"/>

    <item android:id="@+id/CarritoFragment"
        android:title="@string/carrito"/>
    <item android:id="@+id/PerfilFragment"
        android:title="@string/usuario"/>
    <item android:id="@+id/CategoriasFragment"
        android:title="@string/categorias"/>
    <item android:id="@+id/UbicacionesFragment"
        android:title="@string/Ubicaciones"/>
    </group>
</menu>