<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrito_de_compras"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/total_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_de_productos_0"
        android:textSize="18sp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/total_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_a_pagar_0_00"
        android:textSize="18sp"
        android:paddingBottom="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_carrito"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="10dp"
        android:scrollbars="vertical" />
</LinearLayout>
