<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Gris">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivBackIcon_getPassword"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:gravity="start"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/ivLogoApp_getPassword"
            android:layout_width="wrap_content"
            android:layout_height="137dp"
            app:srcCompat="@drawable/logo_app" />

        <TextView
            android:id="@+id/tvNameApp_getPassword"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/abhaya_libre"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/BlueDark"
            android:textSize="45sp"
            android:textStyle="bold"></TextView>

        <TextView
            android:id="@+id/tvGetPasswordSentence"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/getPassword_sentences"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameApp_Register"
            app:layout_constraintVertical_bias="0.165" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_email"
            android:hint="      Email"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxStrokeWidth="2dp"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail_GetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSent_GetPassword"
            android:layout_width="260dp"
            android:layout_height="68dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/BlueDark"
            android:fontFamily="@font/abhaya_libre"
            android:text="@string/into"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword_Login"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>